--- a/testuidoang/testuidoang.csproj
+++ b/testuidoang/testuidoang.csproj
@@ -46,22 +46,46 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="FormAdmin.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="FormAdmin.Designer.cs">
+      <DependentUpon>FormAdmin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="FormRead.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="FormRead.Designer.cs">
+      <DependentUpon>FormRead.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormUpdate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormUpdate.Designer.cs">
+      <DependentUpon>FormUpdate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="formUtama.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formUtama.Designer.cs">
+      <DependentUpon>formUtama.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormAnggota.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormAnggota.Designer.cs">
+      <DependentUpon>FormAnggota.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="FormAdmin.resx">
+      <DependentUpon>FormAdmin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormAnggota.resx">
+      <DependentUpon>FormAnggota.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formUtama.resx">
+      <DependentUpon>formUtama.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
