--- a/testuidoang/App.config
+++ b/testuidoang/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="testuidoang.Properties.Settings.PerpustakaanConnectionString"
+            connectionString="Data Source=LAPTOP-C3M8HP9E\KURANGTAU;Initial Catalog=Perpustakaan;User ID=sa;Password=affancool23"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
